--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.roynaldi19.abk1_04debugging"
+        applicationId "com.roynaldi19.gd1_01debugging"
         minSdk 21
         targetSdk 32
         versionCode 1
