--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "ABK1_04Debugging"
+rootProject.name = "GD1_01Debugging"
 include ':app'
